# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
tokio-stream = "0.1.12"                                 # network stream helpers
anyhow = "1.0.69"                                       # error handling
bytes = "1.4.0"                                         # helps manage buffers
thiserror = "1.0.39"                                    # error handling
tokio = { version = "1.26.0", features = ["full"] }     # async networking
tokio-util = { version = "0.7.7", features = ["full"] } # networking utils
